<resources>
    <string name="app_name">Kotlin</string>
    <string name="ogabek_matyakubov">Ogabek Matyakubov</string>
    <string name="ogabekdev_1d">\@ogabekdev • 1d</string>
    <string name="i_want_to_add_a_search_icon_to_appear_inside_an_edittext_in_the_left_edge">I want to add a search icon to appear inside an EditText in the left edge?</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="ogabek">Ogabek</string>
</resources>